--- a/app.css
+++ b/app.css
@@ -172,9 +172,19 @@ ul {
   border: none;
   outline: none;
   float: left;
-  padding: 1px 1px 3px 0;
+  padding: 1px 1px 3px 0px;
   background: transparent;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+}
+
+.search-button {
+padding-top: 10px;
+}
+
+.btn-search {
+  background-color: #78A300;
+  color: white;
+  width: 100%;
 }
