--- a/app.css
+++ b/app.css
@@ -138,9 +138,6 @@ ul {
   line-height: 13px;
   color: #333;
   min-height: 13px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  -ms-border-radius: 3px;
   -o-border-radius: 3px;
   border-radius: 3px;
   border: 1px solid #ddd;
@@ -174,18 +171,16 @@ ul {
   float: left;
   padding: 1px 1px 3px 0px;
   background: transparent;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
   box-shadow: none;
-}
-
-.search-button {
-padding-top: 10px;
-padding-bottom: 10px;
 }
 
 .btn-search {
   background-color: #78A300;
   color: white;
   width: 100%;
+  margin: 10px auto;
+}
+
+.btn-search:hover {
+  box-shadow: none;
 }
